src/main/WebApp/resources/css/style.css
::-webkit-input-placeholder { font-style: italic; color: #b8b8b8; }
:-moz-placeholder { font-style: italic; color: #b8b8b8; }


* {
	-moz-box-sizing: border-box;
	-ms-box-sizing: border-box;
	-o-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
}

html,body {
	margin: 0;
	padding: 0;
	font-size: 9pt;
	text-align: center;
	height: 100%;
	font-family: 'Open Sans', sans-serif; !important;
	font-size: 14px;
}

body.signin { background: #f4f4f4 url(../images/circles_tile.png); }
body.signup { background: #ffffff url(../images/header-bg.png) 0 0 repeat-x; }

form {
	position: relative;
}

.clear {
	clear: both;
}

div[data-title].has-focus {position: relative;}

/*input[placeholder]:focus::before,*/
div.has-focus[data-title]::before {
	display: block;

	position: absolute;
	top: -6px; left: 5px;
	z-index: 999;

	content: attr(data-title);
	color: #ffffff;
	background: #88bf24;
	border: 1px solid #7ba624;
	box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.1);

	padding: 1px 5px 1px 3px;
	font-size: 11px;
	font-style: italic;
	font-weight: 500;

	text-align: left;
	text-shadow: 0 1px 0 #71a91a;
	text-transform: uppercase;
}

/*input[placeholder]:focus::after,*/
div.has-focus[data-title]::after {
	content: url(../images/tooltip_pointer.png);
	display: block;
	position: absolute;

	top: 7px;
	left: 10px;
	z-index: 9999;
}

.signup div.has-focus[data-title]::before{
	top: -13px;
}
.signup div.has-focus[data-title]::after {
	top: 0px;
}


.links,
a:active,
a:link,
a:visited
{
	text-decoration: none; font-size: 12px; color: #989897;
}

a:hover{ text-decoration: underline; }

.signin a.privacy { font-weight: bold; }
.signup .childrenpolicy,
.signup a.privacy {
	color: #37b2f9;
	font-size: 12px;
	margin: 20px 0;
	display: inline-table;
	display: inline-block;
}

.signin .childrenpolicy,
.signup .childrenpolicy {
	display: none;
	margin: 0;
	color: #b8b8b8;
}


.signup a.privacy:hover,
a.agree:hover,
a.continue:hover{text-decoration: none;}

a.agree,
a.continue{
	font-size: 14px;
	font-style: italic;
	font-weight: bold;
	float: right;
	display: block;
	white-space: nowrap;
	color: #ffffff;
	background: #37b2f9;
	border: 1px solid #31a0e0;
	padding: 15px 20px
}
a.agree.disabled,
a.continue.disabled{
	cursor: default;
	border-color: #d0d0d0;
	background: rgba(184,184,184,0.5);
	color: rgba(255,255,255,0.7);
	display: block;
}

a.continue.birthday {
	float: none;
	display: inline-table;
	display: inline-block;
	vertical-align: bottom;
	height: 39px;
	line-height: 39px;
	padding: 0 20px;
	margin-left: 5px;
}

.signup .field-container a+.line {
	left: 420px;
}

.links {
	padding: 0.5em;
	bottom: 0; left: 0; right: 0;
	position: absolute;
}

.signin .wrapper {
	display: table;
	margin: 0 auto;
	height: 100%;
	width: 100%;
}

.signin .wrapper-inner {
	display: table-cell;
	vertical-align: middle;
}

.signin .middle {
	width: 330px;
	min-height: 290px;
	margin: 0 auto;
}


.signup .middle {
	margin: 0 auto;
	max-width: 850px;
	width: 70%;
}

.signin .header.recover {
	border-bottom: 1px solid #f5f5f5;
	height: 105px;
}

.signin .header {
	/*
	REMOVED FOR BETA STYLE
	background: url(../images/logo.png) center 20px no-repeat;
	height: 75px;
	*/
	background: url(../images/nt_logo_beta_login.png) 0 0 no-repeat;
	height: 94px;
}

.signup .header {
	/*
	REMOVED FOR BETA STYLE
	background: url(../images/logo-white.png) left center no-repeat;
	background: url(../images/nt_beta_logo_acct_create.png) left center no-repeat;
	*/
	position: relative;
	height: 84px;
	text-align: right;
	line-height: 84px;
	margin: 0 0 75px 0;
}

.signup .header img {
	position: absolute;
	left: -139px;
	top: -25px;
}


.signup .header a {
	color: #ffffff;
	font-size: 14px;
	font-weight: 500;
}

.signup div.why {
	display: inline;
	margin-left: 10px;
	color: #3fb3f6;
}

.signup .why:hover .dialog{
	display: block;
	line-height: 2em;
	top: -110px;
	left: -10px;
	white-space: normal;
	font-size: 14px;
	font-style: normal;
	color: #757474;
	margin: 5px 0;
}

.signup .why.email {
	display: none;
	line-height: 39px;
	vertical-align: middle;
}
.signup .why.email:hover .dialog {
	top: -200px;
	left: 0;
}

.signup .why .icon {
	display: inline-table !important;
	display: inline-block !important;
	width: 20px;
	height: 20px;
	background: url(../images/spr_info_icons.png) -19px 0 no-repeat;
}
.signup .why .icon:hover {
	background-position: 0 0;
}


.singup .why,
.signin .forgot {
	position: relative;
}

.signin .forgot .dialog h1{
	color: #494949;
	font-weight: 400;
	font-size: 21px;
}

.signup .why .dialog p,
.signin .forgot .dialog p {
	font-size: 14px;
	font-style: normal;
	color: #757474;
	margin: 5px 0;
}

.signup .why .dialog,
.signin .forgot .dialog {
	display: none;
	z-index: 9999;
	text-align: left;
	width: 459px;
	position: absolute;
	top: 20px;
	left: -122px;
}

.signin .forgot .dialog.password {
	left: -40px;
}

.signup .why .dialog .top{
	height: 10px;
	background: url(../images/bubble2_top.png) 0 0 no-repeat;
}

.signin .forgot .dialog .top {
	width: 459px;
	height: 18px;
	background: url(../images/bubble_top.png) 0 0 no-repeat;
}
.signup .why .dialog .middle {
	background: url(../images/bubble2_middle.png) 0 0 repeat-y;
	padding: 10px 30px;
	width: 100%;
}

.signin .forgot .dialog .middle{
	width: 459px;
	padding-left: 20px;
	min-height: 0;
	background: url(../images/bubble_middle.png) repeat-y;
}


.signup .why .dialog .bottom {
	background: url(../images/bubble2_bottom.png) 0 0 no-repeat;
}

.signin .forgot .dialog .bottom {
	width: 459px;
	height: 6px;
	background: url(../images/bubble_bottom.png) 0 0 no-repeat;
}

.signin .forgot .dialog input{ width: 320px; }
.signin .forgot .dialog button {
	margin: 0 0 0 10px;
}

.signin .forgot,
.signin .forgot a {
	width: 330px;
	color: #757474;
	font-size: 14px;
	font-style: italic;
}

.signin .forgot a {
	color: #3fb3f6;
}
/* ... */

